# CppND-Capstone-Project

./: CMakeLists.txt  README.md  install_dependencies.sh
src/: CircularTrajectory.cpp  CircularTrajectory.h  Conversions.cpp  Conversions.h  Coordinates.cpp  Coordinates.h  ForwardKinematics.h  InverseKinematics.h  Position.cpp  Position.h  RoboticArm.cpp  RoboticArm.h  Trajectory.h  main.cpp
